# portfolio

./: .gitignore  context.md  main.py  pyproject.toml
server/: resume.py
static/: styles.css
templates/: index.html
