[project]
name = "website"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.14.5",
    "flask>=3.1.2",
    "langchain>=1.2.9",
    "langchain-community>=0.3.0",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-openai>=1.1.7",
    "python-dotenv>=1.2.1",
    "pypdf>=5.0.0",
    "pymupdf>=1.24.0",
    "langchain-text-splitters>=1.1.0",
    "faiss-cpu>=1.13.2",
    "langchain-core>=1.2.9",
    "gunicorn>=25.0.3",
]
